# rssdeploy

./: Cargo.toml  README.md  history.txt  shadowsocks.json
.github/workflows/: release.yaml
src/: config.rs  helper.rs  kill.rs  list.rs  load.rs  main.rs  manager.rs  proxy.rs  server.rs  splitted.rs  ss.rs  start.rs
src/manager/: help.rs  kill.rs  list.rs  load.rs  start.rs
