[package]
name = "rssdeploy"
version = "0.1.6"
edition = "2021"
license = "MPL-2.0"
authors = ["araraloren <blackcatoverwall@gmail.com>"]
description = "Manage the shadowsocks and kcptun server"
repository = "https://github.com/araraloren/rssdeploy/"
categories = ["command-line-interface"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"
cote = "0.4"
prettytable-rs = "0.10.0"
rustyline = "12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shellexpand = { version = "3.1.0", features = ["path"] }
tokio = { version = "1.36.0", features = ["full"] }
whoami = "1.4"
